Fix footer alignment

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -137,6 +137,7 @@ footer {
   justify-content: center;
   height: 50px;
   margin-top: auto;
+  padding-top: 50px;
 }
 
 footer p {
